--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-sort-destructure-keys": "^1.3.4",
     "eslint-plugin-vue": "^6.2.2",
+    "jquery": "^3.5.1",
     "mutationobserver-shim": "^0.3.3",
     "popper.js": "^1.16.0",
     "portal-vue": "^2.1.6",
