--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "core-js": "^3.6.4",
@@ -23,6 +25,7 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-sort-destructure-keys": "^1.3.4",
     "eslint-plugin-vue": "^6.2.2",
+    "ghpages": "0.0.10",
     "jquery": "^3.5.1",
     "mutationobserver-shim": "^0.3.3",
     "popper.js": "^1.16.0",
