--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "NODE_ENV=production gh-pages -d dist"
   },
   "dependencies": {
     "core-js": "^3.6.4",
