--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "predeploy": "npm run build",
-    "deploy": "NODE_ENV=production gh-pages -d dist"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.6"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.7.0",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
+    "@vue/cli-plugin-router": "^4.3.1",
     "@vue/cli-service": "~4.3.0",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^4.3.1",
@@ -25,7 +25,6 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-sort-destructure-keys": "^1.3.4",
     "eslint-plugin-vue": "^6.2.2",
-    "ghpages": "0.0.10",
     "jquery": "^3.5.1",
     "mutationobserver-shim": "^0.3.3",
     "popper.js": "^1.16.0",
