--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express:run": "vue-cli-service express:run"
   },
   "dependencies": {
+    "activedirectory2": "^1.3.0",
     "app-root-path": "^3.0.0",
     "arrify": "^2.0.1",
     "axios": "^0.19.2",
