--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "pg": "^8.2.0",
     "redis": "^3.0.2",
     "toastr": "^2.1.4",
