--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redis": "^3.0.2",
     "toastr": "^2.1.4",
     "vue": "^2.6.11",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.6",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
