--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "lint": "vue-cli-service lint; eslint srv --ext .js",
+    "stylelint": "stylelint src/**/*.{vue,scss}",
     "express": "NODE_ENV=dev vue-cli-service express:watch",
     "express:run": "vue-cli-service express:run"
   },
@@ -48,15 +49,23 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-sort-destructure-keys": "^1.3.4",
     "eslint-plugin-vue": "^6.2.2",
+    "husky": "^4.2.5",
     "jquery": "^3.5.1",
     "mutationobserver-shim": "^0.3.3",
     "popper.js": "^1.16.0",
     "portal-vue": "^2.1.6",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
+    "stylelint": "^13.5.0",
+    "stylelint-config-recommended": "^3.0.0",
     "vue-cli-plugin-bootstrap-vue": "~0.6.0",
     "vue-cli-plugin-express": "^1.0.2",
     "vue-template-compiler": "^2.6.11"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run lint && npm run stylelint"
+    }
   },
   "browserslist": [
     "> 1%",
