--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.15",
+    "moment": "^2.26.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "pg": "^8.2.0",
