--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
     "pg": "^8.2.0",
     "redis": "^3.0.2",
     "toastr": "^2.1.4",
+    "vee-validate": "^3.3.3",
     "vue": "^2.6.11",
     "vue-lottie": "^0.2.1",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.6",
+    "vuelidate": "^0.7.5",
+    "vuelidate-error-extractor": "^2.4.1",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
   },
